Fix product details text overflow

--- a/src/styles/ProductDetails.module.css
+++ b/src/styles/ProductDetails.module.css
@@ -6,12 +6,14 @@
     border-radius: 1rem;
     padding: 1rem;
     display: grid;
+    place-items: stretch;
+    place-content: stretch;
     grid-template-columns: 1fr;
     gap: 1rem;
 }
 
 .product-details-container>img{
-    width: 100%;
+    max-width: 100%;
 }
 
 .details{
@@ -19,6 +21,9 @@
     flex-direction: column;
     gap: 1rem;
     justify-content: flex-start;
+    word-wrap: break-word;
+    text-wrap: wrap;
+    overflow-wrap: anywhere;
 }
 
 .details>h1{
